# MartechDemo

./: .gitignore  ARCHITECTURE.md  adobe_analytics.csv  blueprint.py  pyproject.toml  qualtrics.csv
.humbot/: app.json
cicd/azure-devops/: azure-pipelines.yml
config/connectors/: connector_registry.yaml
infra/adf_medallion/: manifest.json
infra/adf_medallion/arm/: adf_linked_services.json
infra/adf_medallion/powerbi/: POWERBI_REALTIME.md
infra/adf_medallion/stream_analytics/: streaming_job.json
infra/arm-templates/: main.json
infra/arm-templates/modules/: data-factory.json  keyvault.json  monitoring.json  storage.json
infra/arm-templates/parameters/: dev.parameters.json  prod.parameters.json
infra/aws/cloudformation/: main.json
infra/aws/scripts/: deploy.sh
infra/scripts/: deploy.sh
skills/add-analytics-connector/add-analytics-connector/: SKILL.md
skills/add-crm-connector/add-crm-connector/: SKILL.md
skills/add-db-connector/add-db-connector/: SKILL.md
skills/add-ecommerce-connector/add-ecommerce-connector/: SKILL.md
skills/add-gold-model/add-gold-model/: SKILL.md
src/connectors/: __init__.py  access_connector.py  adobe_analytics_connector.py  base_connector.py  connector_factory.py  excel_connector.py  google_analytics_connector.py  salesforce_connector.py  spreadsheet_connector.py
src/transformations/: sql_to_gold.py
src/transformations/raw_to_silver/: transform.py
src/transformations/silver_to_gold/: transform.py
tests/data-quality/gold/: test_gold_quality.py
tests/data-quality/raw/: test_raw_quality.py
(+34 files in other folders)
