[project]
name = "martech-fabric-pipeline"
version = "1.0.0"
description = "MarTech Retail Data Pipeline - Azure Fabric with Medallion Architecture"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "azure-identity>=1.14",
    "azure-keyvault-secrets>=4.7",
    "azure-storage-file-datalake>=12.14",
    "google-auth>=2.29",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "ruff>=0.1",
    "mypy>=1.6",
    "great-expectations>=0.18",
]
spark = [
    "pyspark>=3.5",
    "delta-spark>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (requires Azure connection)",
    "data_quality: Data quality validation tests",
    "slow: Slow tests (>30s)",
]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
